small optimisation to RouteEval